# CSC361Project

./: .gitignore  Final_Report_CSC361_Spam_Detector.docx  README.md  config.py  pyproject.toml  run_gui.bat  spam_detector_model.pkl  test.py  tfidf_vectorizer.pkl
CSC361_project/: tempCodeRunnerFile.py  test.py
models/: spam_detector_model.pkl  tfidf_vectorizer.pkl
src/: SpamNotSpamDataset.py  config.py  custom_dataset  gui.py  gui2.py  plot.py
src/GUI/: gui.py  gui2.py  style.py
src/csc361project.egg-info/: PKG-INFO  SOURCES.txt
src/main/python/GUI/: gui2.py  style.py
training/: plot.py  training_code.py
